Add file pickers, styling and logic

--- a/frontend/scss/components/_components.scss
+++ b/frontend/scss/components/_components.scss
@@ -8,3 +8,7 @@
 /* Blocks
    ========================================================================== */
 @import "blocks/blocks";
+
+/* Forms
+   ========================================================================== */
+@import "forms/forms";
