--- a/frontend/scss/components/blocks/_blocks.scss
+++ b/frontend/scss/components/blocks/_blocks.scss
@@ -7,5 +7,5 @@
 
 /* General
    ========================================================================== */
-@import "img";
-@import "a";
+@import 'box';
+@import 'file-picker';
