--- a/frontend/scss/components/forms/_file.scss
+++ b/frontend/scss/components/forms/_file.scss
@@ -1,7 +1,9 @@
 /* ==========================================================================
-   Scaffolding
-
-   This file is exclusively intended for setting up imports
-   Never add styles directly to this file
+   Forms - File
    ========================================================================== */
 
+.file-picker__input {
+    position: absolute;
+
+    opacity: 0;
+}
