--- a/frontend/scss/config/general/_sizes.scss
+++ b/frontend/scss/config/general/_sizes.scss
@@ -7,4 +7,6 @@
 
 /* Screen sizes
    ========================================================================== */
-$screen-mobile: 600px;
+
+// Small devices (landscape phones, 576px and up)
+$screen-mobile: 576px;
