--- a/frontend/scss/general/_general.scss
+++ b/frontend/scss/general/_general.scss
@@ -7,3 +7,7 @@
 /* Base
    ========================================================================== */
 @import "base";
+
+/* Typography
+   ========================================================================== */
+@import "typography/typography";
