--- a/frontend/scss/components/forms/_forms.scss
+++ b/frontend/scss/components/forms/_forms.scss
@@ -1,3 +1,8 @@
 /* ==========================================================================
-   Scaffolding - Row
+   Forms
+
+   This file is exclusively intended for setting up imports
+   Never add styles directly to this file
    ========================================================================== */
+
+@import "file";
