--- a/frontend/scss/general/typography/_bodycopy.scss
+++ b/frontend/scss/general/typography/_bodycopy.scss
@@ -1,7 +1,7 @@
 /* ==========================================================================
-   Scaffolding
-
-   This file is exclusively intended for setting up imports
-   Never add styles directly to this file
+   General - Typography - Bodycopy
    ========================================================================== */
 
+.text--bold {
+    font-weight: 600;
+}
