--- a/frontend/scss/general/typography/_typography.scss
+++ b/frontend/scss/general/typography/_typography.scss
@@ -1,7 +1,7 @@
 /* ==========================================================================
-   Scaffolding
+   General - Typography
 
-   This file is exclusively intended for setting up imports
-   Never add styles directly to this file
+   Never add styles directly to this file - set up imports
    ========================================================================== */
 
+@import "bodycopy";
