--- a/frontend/scss/config/general/_colors.scss
+++ b/frontend/scss/config/general/_colors.scss
@@ -22,4 +22,4 @@ $text-color:                $grey;
 $text-color--light:         $grey--lighter;
 
 $file--border:              $grey--lighter;
-$file--background--hover:   $grey--lightest;
+$file--border--hover:       $grey;
