--- a/frontend/scss/general/_base.scss
+++ b/frontend/scss/general/_base.scss
@@ -11,8 +11,12 @@ body {
     margin: 0;
     padding: 0;
 
+    font: {
+        family: $font-family--base;
+        size: 16px;
+    }
+
     background: $white;
 
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
 }
