--- a/templates/components/filePicker.html.twig
+++ b/templates/components/filePicker.html.twig
@@ -1,7 +1,7 @@
 <div class="file-picker" data-from="{{from}}" data-to="{{to}}">
 
     <h2 class="file-picker__title">
-        {{from}} to {{to}}
+        {{from | upper}} to {{to | upper}}
     </h2>
 
     <input type="file"
@@ -15,7 +15,6 @@
             class="file-picker__label">
 
         <span class="file-picker__label__text">
-            {# TODO: Add translations #}
             <span class="text--bold">Choose a file</span> or drag it here
         </span>
 
