--- a/templates/footer/_js_footer.html.twig
+++ b/templates/footer/_js_footer.html.twig
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="frontend/js/scripts.js"></script>
+<script type="text/javascript" src="{{ asset('frontend/js/scripts.js') }}"></script>
