--- a/templates/pages/homepage.html.twig
+++ b/templates/pages/homepage.html.twig
@@ -1,5 +1,11 @@
 {% extends 'layout.html.twig' %}
 
+{% block title %}Conversion - Home{% endblock %}
+
+{% block favicons %}
+    {% include 'head/_favicons.html.twig' %}
+{% endblock %}
+
 {% block stylesheets %}
     {% include 'head/_css.html.twig' %}
 {% endblock %}
