--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Conversion{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
+        {% block favicons %}{% endblock %}
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
